plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

ext {
	set('springCloudVersion', "2023.0.3")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}



configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

apply from: "gradle/spring.gradle"
apply from: "gradle/lombok.gradle"
apply from: "gradle/test.gradle"
apply from: "gradle/swagger.gradle"
apply from: "gradle/db.gradle"
apply from: "gradle/jwt.gradle"
apply from: "gradle/jackson.gradle"
apply from: "gradle/codef.gradle"
apply from: "gradle/minio.gradle"
apply from: "gradle/apache.gradle"
